Improve copyright and authors detection
* Remove duplicated tests
* Do not strip leading @ sign in words
* Streamline some lexer regex (they were incorrectly handling dots)
* Add new copyright statement variants

Signed-off-by: Philippe Ombredanne <pombredanne@nexb.com>

--- a/tests/cluecode/data/copyrights/complex-punctuation.txt.yml
+++ b/tests/cluecode/data/copyrights/complex-punctuation.txt.yml
@@ -1,4 +1,4 @@
 what:
   - copyrights
 copyrights:
-  - Copyright 2018-2019 paritytech/substrate-light-ui authors & contributors
+  - Copyright 2018-2019 @paritytech/substrate-light-ui authors & contributors
