--- a/tests/cluecode/data/copyrights/copyright-2172.txt.yml
+++ b/tests/cluecode/data/copyrights/copyright-2172.txt.yml
@@ -3,7 +3,7 @@ what:
   - holders
 copyrights:
   - Copyright (c) 2015, Contributors
-  - Copyright 2018-2019 paritytech/substrate-light-ui authors & contributors
+  - Copyright 2018-2019 @paritytech/substrate-light-ui authors & contributors
 holders:
   - Contributors
   - paritytech/substrate-light-ui authors & contributors
