--- a/tests/cluecode/data/copyrights/copyright-discussion-false-positive.txt.yml
+++ b/tests/cluecode/data/copyrights/copyright-discussion-false-positive.txt.yml
@@ -6,4 +6,4 @@ copyrights:
   - Copyright (c) 90,2005,2007-2009 Free Software Foundation, Inc.
   - Copyright (c) 1990-2005, 2007-2009 Free Software Foundation, Inc.
   - A. (c) B. (c)
-  - C. copyright D. (c)
+  - C. @copyright D. (c)
