--- a/tests/cluecode/data/copyrights/openoffice_org_report_builder_bin.copyright.yml
+++ b/tests/cluecode/data/copyrights/openoffice_org_report_builder_bin.copyright.yml
@@ -85,7 +85,7 @@ copyrights:
   - Copyright (c) 1991, 1995, 1996, 1997 Free Software Foundation, Inc.
   - Copyright (c) 2004 Aleix Conchillo Flaque <aleix@member.fsf.org>
   - Copyright (c) 2004 Jiang Lei <tristone@deluxe.ocn.ne.jp>
-  - Copyright (c) 2004-2005 Vladimir Berezniker http://public.xdi.org
+  - Copyright (c) 2004-2005 Vladimir Berezniker @ http://public.xdi.org
   - Copyright (c) 1998 Netscape Communications Corporation
   - Copyright (c) 1998-2007 The OpenSSL Project
   - Copyright (c) 1998-2007 The OpenSSL Project
@@ -120,7 +120,7 @@ copyrights:
   - Copyright (c) 1991, 1995, 1996, 1997 Free Software Foundation, Inc.
   - Copyright (c) 2004 Aleix Conchillo Flaque <aleix@member.fsf.org>
   - Copyright (c) 2004 Jiang Lei <tristone@deluxe.ocn.ne.jp>
-  - Copyright (c) 2004-2005 Vladimir Berezniker http://public.xdi.org
+  - Copyright (c) 2004-2005 Vladimir Berezniker @ http://public.xdi.org
   - Copyright (c) 1998 Netscape Communications Corporation
   - Copyright (c) 1998-2007 The OpenSSL Project
   - Copyright (c) 1998-2007 The OpenSSL Project
