--- a/tests/cluecode/data/ics/oprofile-daemon/init.c.yml
+++ b/tests/cluecode/data/ics/oprofile-daemon/init.c.yml
@@ -3,13 +3,13 @@ what:
   - holders
   - holders_summary
 copyrights:
-  - Copyright 2002 OProfile
+  - Copyright 2002 OProfile authors
   - Copyright (c) 2005 Hewlett-Packard Co.
 holders:
-  - OProfile
+  - OProfile authors
   - Hewlett-Packard Co.
 holders_summary:
   - value: Hewlett-Packard
     count: 1
-  - value: OProfile
+  - value: OProfile authors
     count: 1
