--- a/tests/cluecode/data/ics/oprofile-libutil++/sparse_array.h.yml
+++ b/tests/cluecode/data/ics/oprofile-libutil++/sparse_array.h.yml
@@ -3,13 +3,13 @@ what:
   - holders
   - holders_summary
 copyrights:
-  - Copyright 2007 OProfile
+  - Copyright 2007 OProfile authors
   - Copyright (c) International Business Machines, 2007
 holders:
-  - OProfile
+  - OProfile authors
   - International Business Machines
 holders_summary:
   - value: International Business Machines
     count: 1
-  - value: OProfile
+  - value: OProfile authors
     count: 1
