Ambiguous Detections ToDo items #3122
* Adds a new --todo post scan option to review potential
  ambiguous license/package detections
* Adds a `todo` top level attribute with these review items
  which is a `ToDo` list for the reviewer

Signed-off-by: Ayan Sinha Mahapatra <ayansmahapatra@gmail.com>

--- a/setup.cfg
+++ b/setup.cfg
@@ -196,6 +196,7 @@ scancode_post_scan =
     filter-clues = cluecode.plugin_filter_clues:RedundantCluesFilter
     consolidate = summarycode.plugin_consolidate:Consolidator
     license-references = licensedcode.licenses_reference:LicenseReference
+    todo = summarycode.todo:AmbiguousDetectionsToDoPlugin
 
 
 # scancode_output_filter is the entry point for filter plugins executed after
