Fix test expectations and tests
Signed-off-by: Ayan Sinha Mahapatra <ayansmahapatra@gmail.com>

--- a/tests/packagedcode/data/debian/copyright/debian-2019-11-15/non-free/f/firmware-nonfree/stable_firmware-netxen.copyright-detailed.expected.yml
+++ b/tests/packagedcode/data/debian/copyright/debian-2019-11-15/non-free/f/firmware-nonfree/stable_firmware-netxen.copyright-detailed.expected.yml
@@ -37,4 +37,4 @@ license_detections:
           RIGHT) EMBODIED IN ANY OTHER QLOGIC HARDWARE OR SOFTWARE EITHER SOLELY OR IN\nCOMBINATION WITH THIS PROGRAM."
     identifier: qlogic_firmware-ccb8af98-2b73-8f68-aa46-29df97f773fe
 other_license_detections: []
-copyright: Copyright (c) 2003-2010 QLogic Corporation QLogic Linux Intelligent Ethernet
+copyright: Copyright (c) 2003-2010 QLogic Corporation
