--- a/tests/packagedcode/data/debian/copyright/debian-slim-2021-04-07/usr/share/doc/gcc-9-base/copyright-detailed.expected.yml
+++ b/tests/packagedcode/data/debian/copyright/debian-slim-2021-04-07/usr/share/doc/gcc-9-base/copyright-detailed.expected.yml
@@ -2204,7 +2204,9 @@ copyright: |
   Copyright (c) 2005, 2006, 2007, 2008, 2009, 2010 Free Software Foundation, Inc.
   Copyright (c) 2001, 2002, 2003, 2004, 2005, 2006, 2007, 2008, 2009, 2010 Free Software Foundation, Inc.
   Copyright (c) 2001-2019 Free Software Foundation, Inc.
+  Copyright ISO/IEC (International Organization for Standardization and International Electrotechnical Commission) 1996, 1997, 1998, 1999, 2000, 2001, 2002, 2003, 2004, 2005, 2006, 2007, 2008, 2009, 2010
   Copyright (c) 2001, 2002, 2003, 2004, 2005, 2006, 2007, 2008, 2009, 2010 Free Software Foundation, Inc.
+  Copyright ISO/IEC (International Organization for Standardization and International Electrotechnical Commission) 1996, 1997, 1998, 1999, 2000, 2001, 2002, 2003, 2004, 2005, 2006, 2007, 2008, 2009, 2010
   Copyright (c) 2008, 2009, 2010 Free Software Foundation, Inc.
   Copyright (c) 2012 Free Software Foundation, Inc.
   Copyright (c) 2009, 2010 Free Software Foundation, Inc.
