--- a/tests/packagedcode/data/debian/copyright/debian-slim-2021-04-07/usr/share/doc/libgnutls30/copyright-detailed.expected.yml
+++ b/tests/packagedcode/data/debian/copyright/debian-slim-2021-04-07/usr/share/doc/libgnutls30/copyright-detailed.expected.yml
@@ -1589,11 +1589,11 @@ copyright: |
   Copyright (c) 2011-2016, Andy Polyakov
   Copyright (c) 2000, 2001 Markus Friedl
   Copyright (c) 2008 Alexander von Gernler
-  Copyright Mike Hamburg
+  Copyright Mike Hamburg (Stanford University), 2009
   Copyright/License Copyright (c) 1996,1999 by Internet Software Consortium
   Copyright (c) 2016 Wrymouth Innovation Ltd
-  Copyright 2011-2016 The Pkcs11Interop Project
-  Copyright (c) 2009-2020 Free Software Foundation, Inc. Comment Debian
+  Copyright 2011-2016 The
+  Copyright (c) 2009-2020 Free Software Foundation, Inc.
   Copyright 2017 Red Hat, Inc.
   Copyright 2016 Nikos Mavrogiannopoulos Comment On Debian
   Copyright 2016 Google Inc. Comment On Debian
@@ -1618,7 +1618,7 @@ copyright: |
   Copyright 2001, 2002 Niels Moller
   Copyright 2016 Dmitry Eremin-Solenikov
   Copyright 2010 Niels Moller
-  Copyright 2013-2015 Dmitry Eremin-Solenikov Comment
+  Copyright 2013-2015 Dmitry Eremin-Solenikov
   Copyright 2015 Dmitry Eremin-Solenikov
   Copyright 2017 Dmitry Eremin-Solenikov <dbaryshkov@gmail.com>
   Copyright 2015 Dmity Eremin-Solenikov 2013 Niels Moller
