--- a/tests/packagedcode/data/debian/copyright/debian-2019-11-15/main/p/pulseaudio/stable_copyright-detailed.expected.yml
+++ b/tests/packagedcode/data/debian/copyright/debian-2019-11-15/main/p/pulseaudio/stable_copyright-detailed.expected.yml
@@ -1368,7 +1368,7 @@ copyright: |
   Copyright (c) 2009 A S Alam <aalam@users.sf.net>
   Copyright (c) 2008 Piotr Drag <piotrdrag@gmail.com>
   Copyright (c) 2008 Fabian Affolter <fab@fedoraproject.org>
-  Copyright (c) 2009 Igor Miletic
+  Copyright (c) 2009 Igor Miletic (Igor Miletitsh) <grejigl-gnomeprevod@yahoo.ca> , 2009
   Copyright (c) 2009 Milos Komarcevic <kmilos@gmail.com> , 2009
   Copyright (c) 2008 Daniel Nylander <po@danielnylander.se>
   Copyright (c) 2009 I. Felix <ifelix@redhat.com>
