--- a/tests/packagedcode/data/debian/copyright/debian-slim-2021-04-07/usr/share/doc/gcc-10-base/copyright-detailed.expected.yml
+++ b/tests/packagedcode/data/debian/copyright/debian-slim-2021-04-07/usr/share/doc/gcc-10-base/copyright-detailed.expected.yml
@@ -1978,6 +1978,7 @@ copyright: |
   Copyright (c) 2001-2019 Free Software Foundation, Inc.
   Copyright (c) 2000, 2001, 2002, 2003, 2004, 2005, 2006, 2007, 2008, 2009, 2010, 2011, 2012, 2012, 2013 Free Software Foundation, Inc.
   Copyright (c) 2002-2019 Free Software Foundation, Inc.
+  Copyright ISO/IEC (International Organization for Standardization and International Electrotechnical Commission) 1996, 1997, 1998, 1999, 2000, 2001, 2002, 2003, 2004, 2005, 2006, 2007, 2008, 2009, 2010
   Copyright (c) 2001-2019 Free Software Foundation, Inc.
   Copyright (c) 2001-2019 Free Software Foundation, Inc.
   Copyright (c) 2005-2015 Free Software Foundation, Inc. Mix
