Handle more corner case of copyright detection
* Some MixedCapsRepeated are not proper nouns.
* Several MixedCaps are not proper nouns.
* mailto: is a proper email prefix
* Other misc. improvements


Signed-off-by: Philippe Ombredanne <pombredanne@nexb.com>

--- a/tests/cluecode/data/copyrights/devel.txt.yml
+++ b/tests/cluecode/data/copyrights/devel.txt.yml
@@ -3,10 +3,10 @@ what:
   - holders
   - holders_summary
 copyrights:
-  - Copyright 2011 JSON-SMART authors
+  - Copyright (c) 2002 the Initial Developer
 holders:
-  - JSON-SMART authors
+  - the Initial Developer
 holders_summary:
-  - value: JSON-SMART authors
+  - value: the Initial Developer
     count: 1
 
