--- a/tests/cluecode/data/copyrights/misco2/osvdb.txt.yml
+++ b/tests/cluecode/data/copyrights/misco2/osvdb.txt.yml
@@ -3,3 +3,11 @@ what:
   - holders
   - holders_summary
   - authors
+copyrights:
+  - copyrighted by the Open Source Vulnerability Database (http://osvdb.org)
+holders:
+  - the Open Source Vulnerability Database
+holders_summary:
+  - value: the Open Source Vulnerability Database
+    count: 1
+
