Refine copyright tests
Signed-off-by: Philippe Ombredanne <pombredanne@nexb.com>

--- a/tests/cluecode/data/copyrights/misco2/copy-a9.txt.yml
+++ b/tests/cluecode/data/copyrights/misco2/copy-a9.txt.yml
@@ -3,3 +3,10 @@ what:
   - holders
   - holders_summary
   - authors
+copyrights:
+  - Copyright (c) 1991, 1999 Free Software Foundation, Inc.
+holders:
+  - Free Software Foundation, Inc.
+holders_summary:
+  - value: Free Software Foundation
+    count: 1
