--- a/tests/cluecode/data/copyrights/misco2/your-company.txt.yml
+++ b/tests/cluecode/data/copyrights/misco2/your-company.txt.yml
@@ -3,3 +3,10 @@ what:
   - holders
   - holders_summary
   - authors
+copyrights:
+  - Copyrighted IP YOUR COMPANY
+holders:
+  - IP YOUR COMPANY
+holders_summary:
+  - value: IP YOUR COMPANY
+    count: 1
