--- a/tests/cluecode/data/copyrights/misco2/AUTHORSdottxt.txt.yml
+++ b/tests/cluecode/data/copyrights/misco2/AUTHORSdottxt.txt.yml
@@ -3,3 +3,10 @@ what:
   - holders
   - holders_summary
   - authors
+copyrights:
+  - Copyright 2011, AUTHORS.txt (http://jqueryui.com/about)
+holders:
+  - AUTHORS.txt
+holders_summary:
+  - value: AUTHORS.txt
+    count: 1
