--- a/tests/cluecode/data/copyrights/misco2/contributing-members.txt.yml
+++ b/tests/cluecode/data/copyrights/misco2/contributing-members.txt.yml
@@ -3,3 +3,10 @@ what:
   - holders
   - holders_summary
   - authors
+copyrights:
+  - Copyright (c) 2017, Contributing Member(s) of Distributed Management Task Force, Inc
+holders:
+  - Contributing Member(s) of Distributed Management Task Force, Inc
+holders_summary:
+  - value: Contributing Member(s) of Distributed Management Task Force, Inc
+    count: 1
