--- a/tests/cluecode/data/copyrights/misco2/copyrighted-by-colon.txt.yml
+++ b/tests/cluecode/data/copyrights/misco2/copyrighted-by-colon.txt.yml
@@ -3,3 +3,10 @@ what:
   - holders
   - holders_summary
   - authors
+copyrights:
+  - Copyright 2003 Sun Microsystems, Inc.
+holders:
+  - Sun Microsystems, Inc.
+holders_summary:
+  - value: Sun Microsystems
+    count: 1
