--- a/tests/cluecode/data/copyrights/misco2/copyrighted-complex.txt.yml
+++ b/tests/cluecode/data/copyrights/misco2/copyrighted-complex.txt.yml
@@ -3,3 +3,11 @@ what:
   - holders
   - holders_summary
   - authors
+copyrights:
+  - copyrighted by http://www.dre.vanderbilt.edu/~schmidt/' Douglas C. Schmidt
+  - Copyright (c) 1993-2009
+holders:
+  - Douglas C. Schmidt
+holders_summary:
+  - value: Douglas C. Schmidt
+    count: 1
