--- a/tests/cluecode/data/copyrights/misco2/fsf-by.txt.yml
+++ b/tests/cluecode/data/copyrights/misco2/fsf-by.txt.yml
@@ -3,3 +3,10 @@ what:
   - holders
   - holders_summary
   - authors
+copyrights:
+  - copyrighted by the Free Software Foundation
+holders:
+  - the Free Software Foundation
+holders_summary:
+  - value: Free Software Foundation
+    count: 1
