--- a/tests/cluecode/data/copyrights/misco2/gtruc.txt.yml
+++ b/tests/cluecode/data/copyrights/misco2/gtruc.txt.yml
@@ -3,3 +3,10 @@ what:
   - holders
   - holders_summary
   - authors
+copyrights:
+  - Copyright (c) G-Truc Creation
+holders:
+  - G-Truc Creation
+holders_summary:
+  - value: G-Truc Creation
+    count: 1
