--- a/tests/cluecode/data/copyrights/misco2/jsoncpp-auth.txt.yml
+++ b/tests/cluecode/data/copyrights/misco2/jsoncpp-auth.txt.yml
@@ -3,3 +3,10 @@ what:
   - holders
   - holders_summary
   - authors
+copyrights:
+  - Copyright (c) 2007-2010 by Baptiste Lepilleur and The JsonCpp Authors
+holders:
+  - Baptiste Lepilleur and The JsonCpp Authors
+holders_summary:
+  - value: Baptiste Lepilleur and The JsonCpp Authors
+    count: 1
