--- a/tests/cluecode/data/copyrights/misco2/ocaml.txt.yml
+++ b/tests/cluecode/data/copyrights/misco2/ocaml.txt.yml
@@ -3,3 +3,10 @@ what:
   - holders
   - holders_summary
   - authors
+copyrights:
+  - Copyright 2013-2020 by OCamlPro
+holders:
+  - OCamlPro
+holders_summary:
+  - value: OCamlPro
+    count: 1
