--- a/tests/cluecode/data/copyrights/misco2/portion-copyright.txt.yml
+++ b/tests/cluecode/data/copyrights/misco2/portion-copyright.txt.yml
@@ -3,3 +3,10 @@ what:
   - holders
   - holders_summary
   - authors
+copyrights:
+  - copyrighted by Carl E. Harris, 1993 and 1995
+holders:
+  - Carl E. Harris,
+holders_summary:
+  - value: Carl E. Harris,
+    count: 1
