Ensure all copyright tests pass
Signed-off-by: Philippe Ombredanne <pombredanne@nexb.com>

--- a/tests/cluecode/data/copyrights/with_trailing_words.js.yml
+++ b/tests/cluecode/data/copyrights/with_trailing_words.js.yml
@@ -7,6 +7,7 @@ copyrights:
   - Copyright 2009-2015 Jeremy Ashkenas, DocumentCloud and Investigative Reporters & Editors
   - Copyright 2009-2015 Jeremy Ashkenas, DocumentCloud and Investigative Reporters & Editors
   - Copyright 2009-2015 Jeremy Ashkenas, DocumentCloud and Investigative Reporters & Editors
+    Distributed
   - (c) Varun Malhotra 2013 Source Code https://github.com/softvar/json2html
   - Copyright 2015, Mycompany
   - Copyright 2015, Mycompany
@@ -15,16 +16,18 @@ holders:
   - The Dojo Foundation
   - Jeremy Ashkenas, DocumentCloud and Investigative Reporters & Editors
   - Jeremy Ashkenas, DocumentCloud and Investigative Reporters & Editors
-  - Jeremy Ashkenas, DocumentCloud and Investigative Reporters & Editors
+  - Jeremy Ashkenas, DocumentCloud and Investigative Reporters & Editors Distributed
   - Varun Malhotra Source Code
   - Mycompany
   - Mycompany
   - Mycompany
 holders_summary:
-  - value: Jeremy Ashkenas, DocumentCloud and Investigative Reporters & Editors
-    count: 3
   - value: Mycompany
     count: 3
+  - value: Jeremy Ashkenas, DocumentCloud and Investigative Reporters & Editors
+    count: 2
+  - value: Jeremy Ashkenas, DocumentCloud and Investigative Reporters & Editors Distributed
+    count: 1
   - value: The Dojo Foundation
     count: 1
   - value: Varun Malhotra Source Code
