--- a/tests/cluecode/data/ics/chromium-chrome-common-extensions-docs-examples-extensions-oauth_contacts/NOTICE.yml
+++ b/tests/cluecode/data/ics/chromium-chrome-common-extensions-docs-examples-extensions-oauth_contacts/NOTICE.yml
@@ -6,13 +6,13 @@ copyrights:
   - copyright unitedHeroes.net
   - Copyright (c) 2009, unitedHeroes.net
   - Copyright Paul Johnston 2000 - 2002. Other contributors Greg Holt, Andrew Kepert, Ydnar,
-    Lostinet
+    Lostinet Distributed
 holders:
   - unitedHeroes.net
   - unitedHeroes.net
-  - Paul Johnston - Other contributors Greg Holt, Andrew Kepert, Ydnar, Lostinet
+  - Paul Johnston - Other contributors Greg Holt, Andrew Kepert, Ydnar, Lostinet Distributed
 holders_summary:
   - value: unitedHeroes.net
     count: 2
-  - value: Paul Johnston - Other contributors Greg Holt, Andrew Kepert, Ydnar, Lostinet
+  - value: Paul Johnston - Other contributors Greg Holt, Andrew Kepert, Ydnar, Lostinet Distributed
     count: 1
