--- a/tests/licensedcode/data/datadriven/lic3/about_2.html.yml
+++ b/tests/licensedcode/data/datadriven/lic3/about_2.html.yml
@@ -1,2 +1,8 @@
 license_expressions:
-  - aml
+  - epl-1.0
+  - apache-2.0
+  - apache-2.0
+  - apache-2.0
+  - apache-2.0
+  - apache-2.0
+  - epl-2.0
