--- a/tests/licensedcode/data/datadriven/external/fossology-licenses/pixware-eula.txt.yml
+++ b/tests/licensedcode/data/datadriven/external/fossology-licenses/pixware-eula.txt.yml
@@ -1,4 +1,5 @@
 license_expressions:
+  - proprietary-license
   - commercial-license
 notes: this is a license from fossology license reference Pixware-EULA (XMLmind Spell Checker
   SDK License Agreement) http://www.xmlmind.com/spellchecker/license_sc-sdk.html
