Improve copyright detection
Also update some license ignorables and add new SAX license rules

Signed-off-by: Philippe Ombredanne <pombredanne@nexb.com>

--- a/tests/cluecode/data/copyrights/html_incorrect-detail_9_html.html.yml
+++ b/tests/cluecode/data/copyrights/html_incorrect-detail_9_html.html.yml
@@ -1,5 +1,5 @@
 what:
   - copyrights
 copyrights:
-  - (c) 2004-2009 http://www.pudn.com/' color red' pudn.com
+  - (c) 2004-2009 http://www.pudn.com/ color red' pudn.com
 notes: this is a corner and rare case that's not perfectfor now.
