--- a/tests/cluecode/data/copyrights/misco2/copyrighted-complex.txt.yml
+++ b/tests/cluecode/data/copyrights/misco2/copyrighted-complex.txt.yml
@@ -4,7 +4,7 @@ what:
   - holders_summary
   - authors
 copyrights:
-  - copyrighted by http://www.dre.vanderbilt.edu/~schmidt/' Douglas C. Schmidt
+  - copyrighted by http://www.dre.vanderbilt.edu/~schmidt/ Douglas C. Schmidt
   - Copyright (c) 1993-2009
 holders:
   - Douglas C. Schmidt
