--- a/tests/cluecode/data/copyrights/misco2/isaac-s.txt.yml
+++ b/tests/cluecode/data/copyrights/misco2/isaac-s.txt.yml
@@ -2,10 +2,11 @@ what:
   - copyrights
   - holders
   - holders_summary
+  - authors
 copyrights:
-  - Copyright (c) 2000 by ThisOldHouse
+  - Copyright Isaac Z.
 holders:
-  - ThisOldHouse
+  - Isaac Z.
 holders_summary:
-  - value: ThisOldHouse
+  - value: Isaac Z.
     count: 1
