--- a/tests/cluecode/data/ics/proguard-docs/acknowledgements.html.yml
+++ b/tests/cluecode/data/ics/proguard-docs/acknowledgements.html.yml
@@ -3,7 +3,7 @@ what:
   - holders
   - holders_summary
 copyrights:
-  - Copyright (c) 2002-2009 http://www.graphics.cornell.edu/~eric/' Eric Lafortune
+  - Copyright (c) 2002-2009 http://www.graphics.cornell.edu/~eric/ Eric Lafortune
 holders:
   - Eric Lafortune
 holders_summary:
