--- a/tests/cluecode/data/copyrights/misco2/c_OPYRight.txt.yml
+++ b/tests/cluecode/data/copyrights/misco2/c_OPYRight.txt.yml
@@ -2,10 +2,11 @@ what:
   - copyrights
   - holders
   - holders_summary
+  - authors
 copyrights:
-  - Copyright (c) 2000 by ThisOldHouse
+  - (c) OPYRiGHT ARCADE 1997
 holders:
-  - ThisOldHouse
+  - ARCADE
 holders_summary:
-  - value: ThisOldHouse
+  - value: ARCADE
     count: 1
