--- a/tests/cluecode/data/copyrights/misco2/opyright-baidu.txt.yml
+++ b/tests/cluecode/data/copyrights/misco2/opyright-baidu.txt.yml
@@ -2,10 +2,11 @@ what:
   - copyrights
   - holders
   - holders_summary
+  - authors
 copyrights:
-  - Copyright (c) 2000 by ThisOldHouse
+  - opyright 2014 Baidu Inc.
 holders:
-  - ThisOldHouse
+  - Baidu Inc.
 holders_summary:
-  - value: ThisOldHouse
+  - value: Baidu Inc.
     count: 1
