--- a/tests/cluecode/data/ics/libvpx-examples-includes-geshi-docs/geshi-doc.html.yml
+++ b/tests/cluecode/data/ics/libvpx-examples-includes-geshi-docs/geshi-doc.html.yml
@@ -14,7 +14,7 @@ copyrights:
   - (c) 2004 - 2007 Nigel McNie, 2007 - 2008 Benny Baumann (http://qbnz.com/highlighter/ and
     http://geshi.org/)
   - Copyright (c) 2004 Nigel McNie (http://qbnz.com/highlighter/)
-  - Copyright (c) 2008 name ( website URL )
+  - Copyright (c) 2008
 holders:
   - Nigel McNie, - Benny Baumann
   - Nigel McNie, - Benny Baumann
@@ -22,11 +22,8 @@ holders:
   - Nigel McNie, - Benny Baumann
   - Nigel McNie, - Benny Baumann
   - Nigel McNie
-  - name  website URL
 holders_summary:
   - value: Nigel McNie, - Benny Baumann
     count: 5
   - value: Nigel McNie
-    count: 1
-  - value: name website URL
     count: 1
