Pin Sphinx to 5.3.0
    * 5.3.0 is the last version that can use docutils < 0.17

Signed-off-by: Jono Yang <jyang@nexb.com>

--- a/setup.cfg
+++ b/setup.cfg
@@ -136,7 +136,7 @@ testing =
     pytest-rerunfailures
 
 docs =
-    Sphinx >= 4.3.0
+    Sphinx == 5.3.0
     sphinx_rtd_theme >= 0.5.1
     docutils < 0.17
     doc8
