Improve copyright detection
Signed-off-by: Philippe Ombredanne <pombredanne@nexb.com>

--- a/tests/cluecode/data/copyrights/misco2/isaac-s.txt.yml
+++ b/tests/cluecode/data/copyrights/misco2/isaac-s.txt.yml
@@ -4,9 +4,9 @@ what:
   - holders_summary
   - authors
 copyrights:
-  - Copyright Isaac Z.
+  - Copyright Isaac Z. Schlueter
 holders:
-  - Isaac Z.
+  - Isaac Z. Schlueter
 holders_summary:
-  - value: Isaac Z.
+  - value: Isaac Z. Schlueter
     count: 1
