--- a/tests/cluecode/data/ics/quake-quake-src-QW-client/menu.c.yml
+++ b/tests/cluecode/data/ics/quake-quake-src-QW-client/menu.c.yml
@@ -4,12 +4,12 @@ what:
   - holders_summary
 copyrights:
   - Copyright (c) 1996-1997 Id Software, Inc.
-  - (c) 1996 Id Software,', 0Inc.
+  - (c) 1996 Id Software 0Inc.
 holders:
   - Id Software, Inc.
-  - Id Software,', 0Inc.
+  - Id Software 0Inc.
 holders_summary:
-  - value: Id Software, Inc.
+  - value: Id Software 0Inc.
     count: 1
-  - value: Id Software,', 0Inc.
+  - value: Id Software, Inc.
     count: 1
