--- a/tests/cluecode/data/ics/chromium-chrome-common-extensions-docs-examples-apps-hello-python-httplib2/__init__.py.yml
+++ b/tests/cluecode/data/ics/chromium-chrome-common-extensions-docs-examples-apps-hello-python-httplib2/__init__.py.yml
@@ -9,7 +9,7 @@ holders:
   - Joe Gregorio
 authors:
   - Joe Gregorio (joe@bitworking.org)
-  - Thomas Broyer
+  - Thomas Broyer (t.broyer@ltgt.net) James Antill
 holders_summary:
   - value: Joe Gregorio
     count: 1
