--- a/tests/cluecode/data/copyrights/adobe_license.txt.yml
+++ b/tests/cluecode/data/copyrights/adobe_license.txt.yml
@@ -3,7 +3,7 @@ what:
   - holders
   - holders_summary
 copyrights:
-  - Copyright Copyright 1990-2009 Adobe Systems Incorporated
+  - Copyright 1990-2009 Adobe Systems Incorporated
 holders:
   - Adobe Systems Incorporated
 holders_summary:
