Improve copyright detection
Fix more misc. cases and adjust tests accordingly including license
ignorables.

Signed-off-by: Philippe Ombredanne <pombredanne@nexb.com>

--- a/tests/cluecode/data/copyrights/misco2/author-javadoc2.txt.yml
+++ b/tests/cluecode/data/copyrights/misco2/author-javadoc2.txt.yml
@@ -4,4 +4,4 @@ what:
   - holders_summary
   - authors
 authors:
-  - mailto:stephane@hillion.org' Stephane Hillion
+  - stephane@hillion.org Stephane Hillion
