--- a/tests/cluecode/data/copyrights/psf_in_python-BitVector_py.py.yml
+++ b/tests/cluecode/data/copyrights/psf_in_python-BitVector_py.py.yml
@@ -3,7 +3,7 @@ what:
   - holders
   - holders_summary
 copyrights:
-  - copyright (c) 2008 Avinash Kak. Python Software Foundation
+  - (c) 2008 Avinash Kak. Python Software Foundation
 holders:
   - Avinash Kak. Python Software Foundation
 holders_summary:
