--- a/tests/cluecode/data/ics/chromium-third_party-libjingle-source-talk-base/base64.cc.yml
+++ b/tests/cluecode/data/ics/chromium-third_party-libjingle-source-talk-base/base64.cc.yml
@@ -3,7 +3,7 @@ what:
   - holders
   - holders_summary
 copyrights:
-  - Copyright (c) 1999, Bob Withers
+  - Copyright (c) 1999, Bob Withers - bwit@pobox.com
 holders:
   - Bob Withers
 holders_summary:
