--- a/tests/cluecode/data/copyrights/html.html.yml
+++ b/tests/cluecode/data/copyrights/html.html.yml
@@ -3,7 +3,7 @@ what:
   - holders
   - holders_summary
 copyrights:
-  - (c) Copyright 2010 by the http://wtforms.simplecodes.com' WTForms Team
+  - (c) Copyright 2010 by the http://wtforms.simplecodes.com WTForms Team
 holders:
   - the WTForms Team
 holders_summary:
