--- a/tests/cluecode/data/copyrights/html_incorrect-detail_9_html.html.yml
+++ b/tests/cluecode/data/copyrights/html_incorrect-detail_9_html.html.yml
@@ -1,5 +1,6 @@
 what:
   - copyrights
 copyrights:
+  - (c) Oss http://s.pudn.com/upload_log.asp?e
   - (c) 2004-2009 http://www.pudn.com/ color red' pudn.com
 notes: this is a corner and rare case that's not perfectfor now.
