--- a/tests/packagedcode/data/debian/copyright/debian-slim-2021-04-07/usr/share/doc/libkrb5-3/copyright-detailed.expected.yml
+++ b/tests/packagedcode/data/debian/copyright/debian-slim-2021-04-07/usr/share/doc/libkrb5-3/copyright-detailed.expected.yml
@@ -1550,7 +1550,7 @@ copyright: |
   copyright MIT, Cygnus Support, Novell, OpenVision Technologies, Oracle, Red Hat, Sun Microsystems, FundsXpress, and others
   Copyright, OpenVision Technologies, Inc., 1993-1996
   Copyright (c) 1998 by the FundsXpress, INC.
-  Copyright (c) 2001, Dr Brian Gladman brg@gladman.uk.net', Worcester, UK.
+  Copyright (c) 2001, Dr Brian Gladman brg@gladman.uk.net Worcester, UK.
   Copyright (c) 2006 Red Hat, Inc.
   Portions copyright (c) 2006 Massachusetts Institute of Technology
   Copyright 2011 Red Hat, Inc.
