Improve copyright detection corner cases
Signed-off-by: Philippe Ombredanne <pombredanne@nexb.com>

--- a/tests/cluecode/data/copyrights/babkin_txt.txt.yml
+++ b/tests/cluecode/data/copyrights/babkin_txt.txt.yml
@@ -4,7 +4,7 @@ what:
   - holders_summary
 copyrights:
   - Copyright (c) North
-  - Copyright (c) South
+  - Copyright (c) South Copyright (c)
   - Copyright (c) 2001 by the TTF2PT1 project
   - Copyright (c) 2001 by Sergey Babkin
 holders:
