--- a/tests/cluecode/data/copyrights/misco2/regexhq/regexhq-008.txt.yml
+++ b/tests/cluecode/data/copyrights/misco2/regexhq/regexhq-008.txt.yml
@@ -3,6 +3,6 @@ what:
   - holders
   - authors
 copyrights:
-  - Copyright 2011 craigslist, inc.
+  - Copyright 2011 craigslist, inc
 holders:
-  - craigslist, inc.
+  - craigslist, inc
