--- a/tests/cluecode/data/copyrights/misco2/nick.txt.yml
+++ b/tests/cluecode/data/copyrights/misco2/nick.txt.yml
@@ -4,9 +4,9 @@ what:
   - holders_summary
   - authors
 copyrights:
-  - Copyright (c) 2005, 2006 Nick Galbreath
+  - Copyright (c) 2005, 2006 Nick Galbreath - nickg at modp dot com
 holders:
-  - Nick Galbreath
+  - Nick Galbreath - nickg at modp dot com
 holders_summary:
-  - value: Nick Galbreath
+  - value: Nick Galbreath - nickg at modp dot com
     count: 1
