Improve morecopyright detection corner cases
Signed-off-by: Philippe Ombredanne <pombredanne@nexb.com>

--- a/tests/cluecode/data/copyrights/transfig_with_parts-transfig.copyright.yml
+++ b/tests/cluecode/data/copyrights/transfig_with_parts-transfig.copyright.yml
@@ -19,7 +19,7 @@ copyrights:
   - Parts Copyright (c) 2002-2006 by Martin Kroeker
   - Copyright 1990, David Koblas
   - Copyright, 1987, Massachusetts Institute of Technology
-  - Copyright (c) 2006 Michael Pfeiffer p3fff@web.de
+  - Copyright (c) 2006 Michael Pfeiffer - p3fff@web.de
 holders:
   - Supoj Sutantavibul
   - Micah Beck
