--- a/tests/cluecode/data/ics/bluetooth-glib-gobject/gobject.rc.in.yml
+++ b/tests/cluecode/data/ics/bluetooth-glib-gobject/gobject.rc.in.yml
@@ -3,9 +3,9 @@ what:
   - holders
   - holders_summary
 copyrights:
-  - Copyright (c) 1998-2004 Tim Janik and Red Hat, Inc.
+  - Copyright (c) 1998-2004 Tim Janik and Red Hat, Inc
 holders:
-  - Tim Janik and Red Hat, Inc.
+  - Tim Janik and Red Hat, Inc
 holders_summary:
-  - value: Tim Janik and Red Hat, Inc.
+  - value: Tim Janik and Red Hat, Inc
     count: 1
