--- a/tests/packagedcode/data/debian/copyright/debian-2019-11-15/main/p/pulseaudio/stable_copyright-detailed.expected.yml
+++ b/tests/packagedcode/data/debian/copyright/debian-2019-11-15/main/p/pulseaudio/stable_copyright-detailed.expected.yml
@@ -1374,7 +1374,7 @@ copyright: |
   Copyright (c) 2009 I. Felix <ifelix@redhat.com>
   Copyright (c) 2009 Krishna Babu K <kkrothap@redhat.com>
   Copyright (c) 2009 Yuri Chornoivan <yurchor@ukr.net>
-  Copyright (c) 2008 Yan Feng Gang
+  Copyright (c) 2008 Yan Feng Gang (sainry) <sainry@gmail.com>
   Copyright 2006-2009 Sjoerd Simons <sjoerd@debian.org>
   Copyright 2006-2008 CJ
   Copyright 2004-2006 Lennart Poettering
