--- a/tests/cluecode/data/ics/chromium-chrome-browser-resources/about_credits.html.yml
+++ b/tests/cluecode/data/ics/chromium-chrome-browser-resources/about_credits.html.yml
@@ -70,7 +70,7 @@ copyrights:
   - Copyright (c) 2001-2002 Thomas Broyer, Charlie Bozeman and Daniel Veillard
   - Copyright (c) 1991 Free Software Foundation, Inc.
   - copyrighted by the Free Software Foundation
-  - Copyright (c) 2005, 2006 Nick Galbreath
+  - Copyright (c) 2005, 2006 Nick Galbreath - nickg at modp dot com
   - Copyright 2008 MolokoCacao
   - Copyright (c) 2004-2009 Sergey Lyubka
   - Portions Copyright (c) 2009 Gilbert Wellisch
@@ -175,7 +175,7 @@ holders:
   - Thomas Broyer, Charlie Bozeman and Daniel Veillard
   - Free Software Foundation, Inc.
   - the Free Software Foundation
-  - Nick Galbreath
+  - Nick Galbreath - nickg at modp dot com
   - MolokoCacao
   - Sergey Lyubka
   - Gilbert Wellisch
@@ -318,7 +318,7 @@ holders_summary:
     count: 1
   - value: Nara Institute of Science and Technology
     count: 1
-  - value: Nick Galbreath
+  - value: Nick Galbreath - nickg at modp dot com
     count: 1
   - value: Niels Provos
     count: 1
