--- a/tests/cluecode/data/ics/chromium-third_party-modp_b64/modp_b64.h.yml
+++ b/tests/cluecode/data/ics/chromium-third_party-modp_b64/modp_b64.h.yml
@@ -3,9 +3,9 @@ what:
   - holders
   - holders_summary
 copyrights:
-  - Copyright (c) 2005, 2006, Nick Galbreath nickg at modp dot com
+  - Copyright (c) 2005, 2006, Nick Galbreath - nickg at modp dot com
 holders:
-  - Nick Galbreath nickg at modp dot com
+  - Nick Galbreath - nickg at modp dot com
 holders_summary:
-  - value: Nick Galbreath nickg at modp dot com
+  - value: Nick Galbreath - nickg at modp dot com
     count: 1
