--- a/tests/cluecode/data/ics/expat-conftools/ltmain.sh.yml
+++ b/tests/cluecode/data/ics/expat-conftools/ltmain.sh.yml
@@ -5,10 +5,10 @@ what:
 copyrights:
   - Copyright (c) 1996, 1997, 1998, 1999, 2000, 2001, 2003, 2004, 2005 Free Software Foundation,
     Inc.
-  - Copyright (c) 2005 Free Software Foundation, Inc.
+  - Copyright (c) 2005 Free Software Foundation, Inc
 holders:
   - Free Software Foundation, Inc.
-  - Free Software Foundation, Inc.
+  - Free Software Foundation, Inc
 holders_summary:
   - value: Free Software Foundation
     count: 2
