--- a/tests/cluecode/data/ics/openssl-crypto-rc4-asm/rc4-ia64.pl.yml
+++ b/tests/cluecode/data/ics/openssl-crypto-rc4-asm/rc4-ia64.pl.yml
@@ -4,10 +4,10 @@ what:
   - holders_summary
 copyrights:
   - Copyright (c) 2005 Hewlett-Packard Development Company, L.P.
-  - Copyright (c) 2005 Hewlett-Packard Development Company, L.P
+  - Copyright (c) 2005 Hewlett-Packard Development Company, L.P.
 holders:
   - Hewlett-Packard Development Company, L.P.
-  - Hewlett-Packard Development Company, L.P
+  - Hewlett-Packard Development Company, L.P.
 holders_summary:
   - value: Hewlett-Packard Development Company, L.P.
     count: 2
