--- a/tests/licensedcode/data/datadriven/external/fossology-licenses/ascender-eula.txt.yml
+++ b/tests/licensedcode/data/datadriven/external/fossology-licenses/ascender-eula.txt.yml
@@ -1,3 +1,3 @@
 license_expressions:
-  - proprietary-license
+  - ascender-eula
 notes: this is a license from fossology license reference Ascender-EULA (Ascender EULA) http://www.ascendercorp.com/services/licensing/eula-5/
