--- a/tests/packagedcode/data/debian/copyright/debian-slim-2021-04-07/usr/share/doc/libcrypt1/copyright-detailed.expected.yml
+++ b/tests/packagedcode/data/debian/copyright/debian-slim-2021-04-07/usr/share/doc/libcrypt1/copyright-detailed.expected.yml
@@ -430,6 +430,6 @@ copyright: |
   Copyright Steven G. Johnson, Daniel Richard G. GPL
   Copyright Francesco Salvestrini FSF
   Copyright Andrew Collier FSF
-  Copyright 2002, 2003, 2004 SuSE Linux AG
-  Germany Copyright 2005, 2008, 2009 2011 SUSE LINUX Products GmbH
+  Copyright 2002, 2003, 2004 SuSE Linux AG, Germany
+  Copyright 2005, 2008, 2009 2011 SUSE LINUX Products GmbH, Germany
   Copyright 2015 Bjorn Esser
