Align setup-mini.cfg with setup.cfg
Reference: https://github.com/nexB/scancode-toolkit/issues/3408
Signed-off-by: Ayan Sinha Mahapatra <ayansmahapatra@gmail.com>

--- a/setup-mini.cfg
+++ b/setup-mini.cfg
@@ -152,6 +152,7 @@ console_scripts =
     scancode = scancode.cli:scancode
     scancode-reindex-licenses = licensedcode.reindex:reindex_licenses
     scancode-license-data = licensedcode.license_db:dump_scancode_license_data
+    regen-package-docs = packagedcode.regen_package_docs:regen_package_docs
 
 # These are configurations for ScanCode plugins as setuptools entry points.
 # Each plugin entry hast this form:
@@ -163,7 +164,6 @@ console_scripts =
 scancode_pre_scan =
     ignore = scancode.plugin_ignore:ProcessIgnore
     facet = summarycode.facet:AddFacet
-    classify = summarycode.classify_plugin:FileClassifier
 
 
 # scancode_scan is the entry point for scan plugins that run a scan after the
@@ -194,6 +194,7 @@ scancode_post_scan =
     filter-clues = cluecode.plugin_filter_clues:RedundantCluesFilter
     consolidate = summarycode.plugin_consolidate:Consolidator
     license-references = licensedcode.licenses_reference:LicenseReference
+    classify = summarycode.classify_plugin:FileClassifier
 
 
 # scancode_output_filter is the entry point for filter plugins executed after
