Add sphinx-reredirects to deps
Signed-off-by: Ayan Sinha Mahapatra <ayansmahapatra@gmail.com>

--- a/setup.cfg
+++ b/setup.cfg
@@ -139,6 +139,7 @@ testing =
 docs =
     Sphinx == 6.2.1
     sphinx_rtd_theme >= 0.5.1
+    sphinx-reredirects >= 0.1.2
     doc8 >= 0.8.1
 
 # linux-only package handling
