--- a/setup-mini.cfg
+++ b/setup-mini.cfg
@@ -1,5 +1,5 @@
 [metadata]
-name = scancode-toolkit
+name = scancode-toolkit-mini
 version = 32.0.2
 license = Apache-2.0 AND CC-BY-4.0 AND LicenseRef-scancode-other-permissive AND LicenseRef-scancode-other-copyleft
 
