Corrected setup.cfg #2945
    * Add in postscan plugin entry points

Signed-off-by: John M. Horan <johnmhoran@gmail.com>

--- a/setup.cfg
+++ b/setup.cfg
@@ -195,7 +195,10 @@ scancode_post_scan =
     mark-source = scancode.plugin_mark_source:MarkSource
     filter-clues = cluecode.plugin_filter_clues:RedundantCluesFilter
     consolidate = summarycode.plugin_consolidate:Consolidator
-
+    license-references = licensedcode.licenses_reference:LicenseReference
+    todo = summarycode.todo:AmbiguousDetectionsToDoPlugin
+    classify = summarycode.classify_plugin:FileClassifier
+    file-cat = summarycode.file_cat:FileCategorizer
 
 
 # scancode_output_filter is the entry point for filter plugins executed after
