--- a/tests/cluecode/data/copyrights/openoffice_org_report_builder_bin.copyright.yml
+++ b/tests/cluecode/data/copyrights/openoffice_org_report_builder_bin.copyright.yml
@@ -18,7 +18,7 @@ copyrights:
   - Copyright (c) 2002 France Telecom
   - Copyright (c) 1990-2003 Sleepycat Software
   - Copyright (c) 1990, 1993, 1994, 1995 The Regents of the University of California
-  - Copyright (c) 2003 by Bitstream, Inc. Cppyright
+  - Copyright (c) 2003 by Bitstream, Inc.
   - Copyright (c) 2006 by Tavmjong Bah
   - Copyright (c) 2007 Red Hat, Inc
   - Copyright (c) 2007 Red Hat, Inc.
